# S25_Crystal_Final_Project

./: .gitignore  README.md
GazeboSim/: my_robot.urdf.xacro  readme.md
GazeboSim/src/: gazebo_speed_controller.py
gazebo/worlds/: color_floor_world.world
src/ColorBarFormatter/: package.xml  setup.cfg  setup.py
src/ColorBarFormatter/ColorBarFormatter/: set_colors.py
src/ColorReader/: package.xml  setup.cfg  setup.py
src/ColorReader/ColorReader/: img_processor.py  img_processor_backup.py  slam_methods.py
src/ColorReader/ColorReader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/my_robot/: README.md  package.xml  setup.py
src/my_robot/launch/: my_robot_gazebo_rviz.launch.py  my_robot_xacro_rviz.launch.py
src/my_robot/models/green_light/: model.sdf
src/my_robot/models/red_light/: model.sdf
src/my_robot/my_robot/: sky_light_launcher.py  sky_light_switcher.py
src/my_robot/urdf/: my_robot.urdf.xacro
src/robotControl/: package.xml  setup.cfg  setup.py
src/robotControl/launch/: robotControl.launch.py
src/robotControl/robotControl/: image_processor.py  robot_control.launch.py  robot_controller.py
