<?xml version="1.0"?>
<package format="3">
  <name>ros2_robot_control</name>
  <description>Robot control using colored signal detection</description>
  
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv_python</depend>
  <depend>numpy</depend>
  <depend>torch</depend>
  <depend>scikit-learn</depend>
  <depend>webcolors</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
